crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_hex_encode_basic.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(hex_encode('hello world'), 2, 5) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| 8656C  |",
        "+--------+",
    ],
)
