crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_hex_encode_emoji_negative.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(hex_encode('test🚀data'), -8, 4) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| 6461   |",
        "+--------+",
    ],
)
