crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_hex_encode_empty.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(hex_encode(''), 1, 3) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "|        |",
        "+--------+",
    ],
)
