crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_hex_encode_mixed.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(hex_encode('café☕test'), 4, 5) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| 166C3  |",
        "+--------+",
    ],
)
