crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_integer_negative.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(-567, -2, 2) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| 67     |",
        "+--------+",
    ],
)
